// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsItemInput renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#242843",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#B7B9C9",
        "borderBottomWidth": 1,
        "marginHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "center",
            },
            {
              "justifyContent": "flex-end",
              "paddingLeft": 16,
            },
          ]
        }
      >
        <TextInput
          keyboardAppearance="dark"
          multiline={true}
          onBlur={[Function]}
          onChangeText={[MockFunction]}
          onFocus={[Function]}
          style={
            [
              {
                "color": "#FFFFFF",
                "flex": 1,
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
                "paddingHorizontal": 0,
                "paddingVertical": 12,
              },
              {
                "textAlignVertical": "top",
              },
              [
                {
                  "color": "#B7B9C9",
                  "minWidth": 160,
                  "paddingVertical": 0,
                  "textAlign": "right",
                },
                {
                  "color": "#B7B9C9",
                },
              ],
            ]
          }
          testID="testID"
          value="value"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`SettingsItemSwitch renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#242843",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#B7B9C9",
        "borderBottomWidth": 1,
        "marginHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <AndroidSwitch
        accessibilityRole="switch"
        enabled={true}
        on={true}
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        thumbTintColor="#242843"
        trackColorForFalse="#FFFFFF"
        trackColorForTrue="#4EB258"
        trackTintColor="#4EB258"
      />
    </View>
  </View>
</View>
`;

exports[`SettingsItemTextValue renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#242843",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#B7B9C9",
        "borderBottomWidth": 1,
        "marginHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            {
              "color": "#B7B9C9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
              "marginRight": 8,
            }
          }
          testID="testID/value"
        >
          value
        </Text>
        <svg
          fill="none"
          height={12}
          style={{}}
          testID="ForwardChevron"
          viewBox="0 0 8 16"
          width={6}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M.293.293a1 1 0 0 1 1.414 0l6 6a1 1 0 0 1 0 1.414l-6 6a1 1 0 0 1-1.414-1.414L5.586 7 .293 1.707a1 1 0 0 1 0-1.414Z"
            fill="#B7B9C9"
            fillRule="evenodd"
            style={{}}
          />
        </svg>
      </View>
    </View>
  </View>
</View>
`;

exports[`SettingsItemTextValue renders correctly without value 1`] = `
<View
  style={
    {
      "backgroundColor": "#242843",
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#B7B9C9",
        "borderBottomWidth": 1,
        "marginHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          title
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      />
    </View>
  </View>
</View>
`;
